tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__AMagicalLunchbox-ogXyVJTpQ8ONbZthhrupqg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10730182094245046698,
  "prerequisites": [
    489,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Given sufficient magical prowess, the Thaumaturgist need not waste their time physically consuming food. The Talisman of Nourishment can hold up to 1000 hunger and 1000 saturation points, and will feed you automatically. \n\nYou can fill it up by placing food items on your hotbar, the more valuable the food, the more points added.\n\n[note]Careful not to place food items you want to keep in your hotbar while you have it on you![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Magical Lunchbox?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    489,
    238
  ],
  "rewards": [],
  "tasks": []
}
