tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__BarleyTime-AAAAAAAAAAAAAAAAAAAKpQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2725,
  "prerequisites": [
    7
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's time to plant some barley to make some bread. If you can't find wheat, barley is a good alternative source to make flour.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Barley Time",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    7
  ],
  "rewards": [],
  "tasks": []
}
