tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__BetterThanMilk-AAAAAAAAAAAAAAAAAAAGRQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1605,
  "prerequisites": [
    1600
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I haven't been feeling well lately. Would you grow me some Terra Wart? They're better than milk, since they only remove negative effects, and stack to 64. Really nice when fighting that Alchemist infernal!\n\nThey also have Auramx8, Praecantatiox4 and Victusx4 essentia on them, very useful for the budding thaumaturge. And you can get them by placing a snow block under your Nether Wart and waiting instead of mutating to get them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Better Than Milk",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1600
  ],
  "rewards": [],
  "tasks": []
}
